tests/conformance/invalid/dup-rule-id/.aigx/files.aigx
<aigx-files>
  <file path="src/foo.ts" domain="core">
    <role>The genome declares ARCH-dup twice</role>
    <check>ARCH-dup</check>
  </file>
</aigx-files>
